
- Reworked the code that handles quoting for the wildcard expansion
  routine. We no longer allocate memory and then modify it, but
  call a function for each quoted parameter which does whatever is
  necessary.

- The shell command parameter parser now considers the non-breaking
  space character (ISO code 160) to be a blank space character, too.


c.lib 1.188 (7.2.2005)

- Folded duplicate code in "stdio_init_exit.c" into a common function.

- Simplified the code in "time_asctime_r.c" which builds the time
  string. It gracefully handles buffer sizes which are too short
  by returning an empty string.

- Moved the "tm->tm_wday" initialization out of the hook function
  in "time_strftime.c" since it was to be called only once anyway.

- Lost a few compiler warnings in "unistd_time_delay.c" and
  "time_gettimeofday.c".

- Folded duplicate code in "time_mktime.c"; also, errno is no longer
  modified unless the library is built with the "CHECK_FOR_NULL_POINTERS"
  option.

- We now allocate the AnchorPath used in the unistd_wildcard_expand.c
  code. Also, the contents of the AnchorPath structure are no longer
  modified between calls. MatchEnd() has to be sufficient.

- Moved redundant code out of the readdir()/opendir()/closedir()
  functions which is not required unless the code is built for
  Unix compatibility mode.

- Lost the __not_a_number and __infinity variables, including the
  code which initialized them.

- Reading/changing the errno variable is no longer done directly, but
  involves accessor functions.

- References to the HUGE_VAL quantity now involve an accessor function, too.

- Changed the manner in which the __huge_val constant is initialized by
  the __math_init() function. The new approach should be more portable.

- The library no longer sends ACTION_DISK_INFO packets to the console
  handler. The side-effects were too varied and irritating after all.

- Added the fsync() and fdatasync() functions and the <stdint.h> and